Adding more training code: 4 Feb 2024

--- a/js_datatypes.html
+++ b/js_datatypes.html
@@ -31,7 +31,7 @@
         lastName:"Diaz", 
         age:35, 
         mark:"blueEYE"};
-        console.log("Object: " + Student);
+        console.log(Student);
 	</script>
     <h1>
         Welcome to my JS code
